Use `insta` and `cargo-insta` for snapshot testing
See https://insta.rs/docs/advanced/ for the globbing setup

See https://insta.rs/docs/cli/ for how to run and update the tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2021"
 [lib]
 name = "new_nu_parser"
 path = "src/lib.rs"
+
+[dev-dependencies]
+insta = { version = "1.33.0", features = ["glob"] }
